[MODIFY] Readme.md(15): detect inner method | :2022_0506_1938

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,10 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+function-call.gv.pdf
+.gitignore
+xresult.txt
+.gitignore
+function-call.gv
+buffer_ks.txt
+changelog.md
